@@ -193,19 +193,6 @@ EOF
         fi
     fi
 
-    # Enable ActiveSync in Apache
-    if [ -f ${SOGO_HTTPD_CONF} ]; then
-        perl -pi -e 's/^#(.*Microsoft-Server-ActiveSync.*)/${1}/g' ${SOGO_HTTPD_CONF}
-        perl -pi -e 's/^#(.*retry.*connectiontimeout.*timeout.*)/${1}/g' ${SOGO_HTTPD_CONF}
-        perl -pi -e 's# timeout=360# timeout=$ENV{SOGO_PROXY_TIMEOUT}#g' ${SOGO_HTTPD_CONF}
-
-        perl -pi -e 's#yourhostname#$ENV{HOSTNAME}#g' ${SOGO_HTTPD_CONF}
-
-        #perl -pi -e 's/^(.*x-webobjects-server-port.).*/#${1} "443"/g' ${SOGO_HTTPD_CONF}
-        perl -pi -e 's/^(.*x-webobjects-server-name.*)/#${1}/g' ${SOGO_HTTPD_CONF}
-        perl -pi -e 's/^(.*x-webobjects-server-url.*)/#${1}/g' ${SOGO_HTTPD_CONF}
-    fi
-
     # Add Dovecot Master User, for vacation message expiration
     cat >> ${DOVECOT_MASTER_USER_PASSWORD_FILE} <<EOF
 ${SOGO_SIEVE_MASTER_USER}@${DOVECOT_MASTER_USER_DOMAIN}:$(generate_password_hash ${DEFAULT_PASSWORD_SCHEME} "${SOGO_SIEVE_MASTER_PASSWD}")
@@ -230,54 +217,49 @@ EOF
 
     add_postfix_alias ${SOGO_DAEMON_USER} ${SYS_ROOT_USER}
 
-    # if Roundcube is not installed
+    # Enable sieve support if Roundcube is not installed
+    # WARNING: Do not enable sieve support in both Roundcube and SOGo, because
+    #          the sieve rules generated by them are not compatible.
     if [ X"${USE_RCM}" != X'YES' ]; then
-        # Enable managesieve support
         perl -pi -e 's#(//)(SOGoSieveServer.*)#${2}#' ${SOGO_CONF}
         perl -pi -e 's#(//)(SOGoSieveScriptsEnabled.*)#${2}#' ${SOGO_CONF}
         perl -pi -e 's#(//)(SOGoSieveFolderEncoding*)#${2}#' ${SOGO_CONF}
         perl -pi -e 's#(//)(SOGoVacationEnabled.*)#${2}#' ${SOGO_CONF}
         perl -pi -e 's#(//)(SOGoForwardEnabled.*)#${2}#' ${SOGO_CONF}
-
-        # URL redirect: /mail -> /SOGo
-        mkdir -p ${RCM_HTTPD_ROOT_SYMBOL_LINK}
-        cat > ${RCM_HTTPD_ROOT_SYMBOL_LINK}/index.php <<EOF
-<html>
-    <head>
-        <meta HTTP-EQUIV="REFRESH" content="0; url=/SOGo">
-    </head>
-</html>
-EOF
     fi
 
+    set -x
     if [ X"${WEB_SERVER_IS_APACHE}" == X'YES' ]; then
-        if [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
-            # SOGo package doesn't install Apache config file to correct place,
-            # we have to fix it here.
-            if [ -f /etc/apache2/conf.d/SOGo.conf \
-                -a -d /etc/apache2/conf-available \
-                -a -d /etc/apache2/conf-enabled ]; then
-                cd /etc/apache2/conf-available/ && ln -s ../conf.d/SOGo.conf . >> ${INSTALL_LOG} 2>&1
-            fi
+        backup_file ${SOGO_HTTPD_CONF}
+        cp -f ${SAMPLE_DIR}/sogo/sogo-apache.conf ${SOGO_HTTPD_CONF}
 
+        perl -pi -e 's#PH_SOGO_GNUSTEP_DIR#$ENV{SOGO_GNUSTEP_DIR}#g' ${SOGO_HTTPD_CONF}
+
+        # Always redirect http access to https
+        perl -pi -e 's#^(\s*</VirtualHost>)#RewriteRule /SOGo(.*) https://%{HTTP_HOST}%{REQUEST_URI}\n${1}#' ${HTTPD_CONF}
+
+        # Enable access in https mode
+        perl -pi -e 's#^(\s*</VirtualHost>)#ProxyPass /Microsoft-Server-ActiveSync http://127.0.0.1:20000/SOGo/Microsoft-Server-ActiveSync retry=60 connectiontimeout=5 timeout=$ENV{SOGO_PROXY_TIMEOUT}\n${1}#' ${HTTPD_SSL_CONF}
+        perl -pi -e 's#^(\s*</VirtualHost>)#ProxyPass /SOGo http://127.0.0.1:20000/SOGo retry=0\n${1}#' ${HTTPD_SSL_CONF}
+
+        if [ X"${DISTRO}" == X'RHEL' ]; then
+            echo '# Always redirect http access to https' >> ${HTTPD_CONF}
+            echo 'RewriteRule /SOGo(.*) https://%{HTTP_HOST}%{REQUEST_URI}' >> ${HTTPD_CONF}
+        elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
+            perl -pi -e 's#^(\s*</VirtualHost>)#RewriteRule /SOGo(.*) https://%{HTTP_HOST}%{REQUEST_URI}\n${1}#' ${HTTPD_HTTP_CONF}
             a2enconf SOGo >> ${INSTALL_LOG} 2>&1
+        elif [ X"${DISTRO}" == X'FREEBSD' ]; then
+            # Enable required Apache modules
+            perl -pi -e 's/^#(LoadModule proxy_module.*)/${1}/' ${HTTPD_CONF}
+            perl -pi -e 's/^#(LoadModule proxy_http_module.*)/${1}/' ${HTTPD_CONF}
         fi
     fi
+    set +x
 
     if [ X"${DISTRO}" == X'FREEBSD' ]; then
         # Start service when system start up.
         service_control enable 'memcached_enable' 'YES'
         service_control enable 'sogod_enable' 'YES'
-
-        if [ X"${WEB_SERVER_IS_APACHE}" == X'YES' ]; then
-            # Enable required Apache modules
-            perl -pi -e 's/^#(LoadModule proxy_module.*)/${1}/' ${HTTPD_CONF}
-            perl -pi -e 's/^#(LoadModule proxy_http_module.*)/${1}/' ${HTTPD_CONF}
-
-            # Copy sample apache config file
-            cp ${SAMPLE_DIR}/sogo/sogo-apache.conf ${HTTPD_CONF_DIR}/SOGo.conf
-            perl -pi -e 's#PH_SOGO_GNUSTEP_DIR#$ENV{SOGO_GNUSTEP_DIR}#g' ${HTTPD_CONF_DIR}/SOGo.conf
-        fi
     fi
 
     cat >> ${TIP_FILE} <<EOF
@@ -285,7 +267,7 @@ SOGo Groupware:
     * Web access: httpS://${HOSTNAME}/SOGo/
     * Main config file: ${SOGO_CONF}
     * Apache config file: ${SOGO_HTTPD_CONF}
-    * Nginx config file: ${NGINX_CONF_DEFAULT}
+    * Nginx template file: ${NGINX_CONF_TMPL_DIR}/sogo.tmpl
     * Database:
         - Database name: ${SOGO_DB_NAME}
         - Database user: ${SOGO_DB_USER}
