@@ -31,13 +31,12 @@ EOF
 
     # Redirect home page to webmail by default
     backup_file ${HTTPD_DOCUMENTROOT}/index.html
-    cat > ${HTTPD_DOCUMENTROOT}/index.html <<EOF
-<html>
-    <head>
-        <meta HTTP-EQUIV="REFRESH" content="0; url=/mail/">
-    </head>
-</html>
-EOF
+
+    if [ X"${USE_RCM}" == X'YES' ]; then
+        echo '<html><head><meta HTTP-EQUIV="REFRESH" content="0; url=/mail/"></head></html>' > ${HTTPD_DOCUMENTROOT}/index.html
+    elif [ X"${USE_SOGO}" == X'YES' ]; then
+        echo '<html><head><meta HTTP-EQUIV="REFRESH" content="0; url=/SOGo/"></head></html>' > ${HTTPD_DOCUMENTROOT}/index.html
+    fi
 
     # Add alias for Apache daemon user
     add_postfix_alias ${HTTPD_USER} ${SYS_ROOT_USER}
